--- a/shippable.yml
+++ b/shippable.yml
@@ -28,7 +28,7 @@ integrations:
   hub:
     - integrationName: shippable-ecr  # must match Subscription Integration in Shippable
       type: ecr
-      region: us-east-1
+      region: us-west-2
 
   notifications:
     - integrationName: trigger-img-front-end
